Fix navbar spacing

--- a/assets/css/i.css
+++ b/assets/css/i.css
@@ -602,6 +602,10 @@ input {
   padding-top: 66px;
 }
 
+.pad-top-post {
+  padding-top: 80px;
+}
+
 /************ Layout *************/
 #bump {
   min-height: 100%;
@@ -659,7 +663,7 @@ article.wide {
 
 /* Header */
 header.site-header {
-  padding: 20px 0 0 0;
+  /*padding: 20px 0 0 0;*/
   position: fixed;
   width: 100%;
   z-index: 500;
@@ -744,6 +748,7 @@ header.site-header nav {
   float: right;
   display: block;
   padding-right: 5vw;
+  padding-top: 1vw;
 }
 header.site-header nav:before, header.site-header nav:after {
   content: "";
@@ -1280,7 +1285,7 @@ footer .social ul li:last-child {
   }
 
   header.site-header {
-    min-height: 59px;
+    min-height: 70px;
     /*margin-top: 20px;*/
     padding-top: 0;
   }
